--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/title.css">
 </head>
 <body>
     <header>
@@ -23,5 +28,8 @@
             <a id="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
+
+    <h1>Jorge Lins</h1>
+
 </body>
 </html>
