--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
 </head>
 <body>
     <header>
@@ -29,7 +31,11 @@
         </nav>
     </header>
 
-    <h1>Jorge Lins</h1>
+    
+    <div id="box">
+        <h1>Jorge Lins</h1>
+        <h2>FrontEnd Developer</h2>
+    </div>
 
 </body>
 </html>
