--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/skills.css">
 </head>
 <body>
     <header class="header">
-        <img src="assets/img/logo.png" alt="Avatar Do Jorge">
+        <img src='' alt=''>
 
         <nav>
             <a class="action" href="" lang="en">Skills</a>
@@ -33,14 +35,29 @@
         </nav>
     </header>
 
-    
-    <div class="box">
-        <h1 class="title">Jorge Lins</h1>
-        <h2 class="subtitle">FrontEnd Developer</h2>
-    </div>
+    <section class="banner">
+        <div class="wrapper">
+                <div class="box">
+                <h1 class="title">Jorge Lins</h1>
+                <h2 class="subtitle">FrontEnd Developer</h2>
+            </div>
+            <div class="navigation">
+                <a class="button" href="" lang="en">Download CV</a>
+                <a class="button" href="">Contatos</a>
+            </div>
+        </div>
+    </section>
 
-    <a class="button" href="" lang="en">Download CV</a>
-    <a class="button" href="">Contatos</a>
+    <section class="skills">
+        <h2 class="title -second"> Skills </h2>
 
+        <div class="bars">
+            <img src="assets/img/ico_html5.png" alt="IconeHTML">
+            <img src="assets/img/ico_css3.png" alt="IconeCSS">
+            <img src="assets/img/ico_js.png" alt="IconeJS">
+            <img src="assets/img/ico_nodejs.png" alt="IconeNode">
+            <img src="assets/img/ico_react.png" alt="IconeReact">
+        </div>
+    </section>
 </body>
 </html>
