--- a/index.html
+++ b/index.html
@@ -13,51 +13,59 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/components/title.css">
-    <link rel="stylesheet" href="css/components/subtitle.css">
-    <link rel="stylesheet" href="css/components/box.css">
-    <link rel="stylesheet" href="css/components/button.css">
-    <link rel="stylesheet" href="css/components/action.css">
-    <link rel="stylesheet" href="css/components/header.css">
-    <link rel="stylesheet" href="css/components/banner.css">
-    <link rel="stylesheet" href="css/components/skills.css">
+    <link rel="stylesheet" href="css/components/main-title.css">
+    <link rel="stylesheet" href="css/components/main-subtitle.css">
+    <link rel="stylesheet" href="css/components/main-box.css">
+    <link rel="stylesheet" href="css/components/main-button.css">
+    <link rel="stylesheet" href="css/components/main-action.css">
+    <link rel="stylesheet" href="css/components/main-header.css">
+    <link rel="stylesheet" href="css/components/main-banner.css">
+    <link rel="stylesheet" href="css/components/main-section.css">
+    <link rel="stylesheet" href="css/components/main-skills.css">
+    <link rel="stylesheet" href="css/components/progress-bar.css">
 </head>
 <body>
-    <header class="header">
+    <header class="main-header">
         <img src='' alt=''>
 
         <nav>
-            <a class="action" href="" lang="en">Skills</a>
-            <a class="action" href="">Projetos</a>
-            <a class="action" href="">Sobre</a>
-            <a class="action" href="">Contatos</a>
-            <a class="button" href="" lang="en">Download CV</a>
+            <a class="main-action" href="" lang="en">Skills</a>
+            <a class="main-action" href="">Projetos</a>
+            <a class="main-action" href="">Sobre</a>
+            <a class="main-action" href="">Contatos</a>
+            <a class="main-button" href="" lang="en">Download CV</a>
         </nav>
     </header>
 
-    <section class="banner">
+    <section class="main-banner">
         <div class="wrapper">
-                <div class="box">
-                <h1 class="title">Jorge Lins</h1>
-                <h2 class="subtitle">FrontEnd Developer</h2>
+                <div class="main-box">
+                <h1 class="main-title">Jorge Lins</h1>
+                <h2 class="main-subtitle">FrontEnd Developer</h2>
             </div>
             <div class="navigation">
-                <a class="button" href="" lang="en">Download CV</a>
-                <a class="button" href="">Contatos</a>
+                <a class="main-button" href="" lang="en">Download CV</a>
+                <a class="main-button" href="">Contatos</a>
             </div>
         </div>
     </section>
 
-    <section class="skills">
-        <h2 class="title -second"> Skills </h2>
+    <section class="main-section">
+        <h2 class="main-title -second"> Skills </h2>
 
-        <div class="bars">
-            <img src="assets/img/ico_html5.png" alt="IconeHTML">
-            <img src="assets/img/ico_css3.png" alt="IconeCSS">
-            <img src="assets/img/ico_js.png" alt="IconeJS">
-            <img src="assets/img/ico_nodejs.png" alt="IconeNode">
-            <img src="assets/img/ico_react.png" alt="IconeReact">
-        </div>
+        <article class="main-skills">
+
+            <img class="icon" src="assets/img/ico_html5.png" alt="IconeHTML">
+            <div class="right">
+                <h3 class="title">HTML</h3>
+                <progress class="progress-bar" max="100" value="70">70%</progress>
+            </div>
+
+        </article>
+        <img src="assets/img/ico_css3.png" alt="IconeCSS">
+        <img src="assets/img/ico_js.png" alt="IconeJS">
+        <img src="assets/img/ico_nodejs.png" alt="IconeNode">
+        <img src="assets/img/ico_react.png" alt="IconeReact">
     </section>
 </body>
 </html>
