create Project card and wrapper card components

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="css/components/main-skills.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
+    <link rel="stylesheet" href="css/components/card-project.css">
+    <link rel="stylesheet" href="css/components/wrapper-card.css">
 </head>
 <body>
     <header class="main-header">
@@ -102,5 +104,23 @@
             </article>
         </div>
     </section>
+
+    <section class="main-section -bgBlack">
+        <h2 class="main-title -second"> Projetos </h2>
+
+        <div class="wrapper-card">
+            <figure class="card-project -blue">
+                <img class="logo" src="assets/img/BluePocket.png" alt="BluePocketProject">
+            </figure>
+            <figure class="card-project">
+                <img class="logo" src="assets/img/BluePocket.png" alt="BluePocket   Project">
+            </figure>
+            <figure class="card-project">
+                <img class="logo" src="assets/img/BluePocket.png" alt="BluePocketProject">
+            </figure>
+        </div>
+
+    </section>
+
 </body>
 </html>
