--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/card-project.css">
     <link rel="stylesheet" href="css/components/wrapper-card.css">
+    <link rel="stylesheet" href="css/components/main-description.css">
+    <link rel="stylesheet" href="css/components/button-arrow.css">
+    <link rel="stylesheet" href="css/components/node-card.css">
+    <link rel="stylesheet" href="css/components/main-carousel.css">
 </head>
 <body>
     <header class="main-header">
-        <img src='' alt=''>
+        <img src='assets/img/logo.png' alt='JLlogo'>
 
         <nav>
             <a class="main-action" href="" lang="en">Skills</a>
@@ -120,6 +124,38 @@
             </figure>
         </div>
 
+    </section>
+
+    <section class="main-section -BGblue">
+        <h2 class="main-title -second"> Sobre </h2>
+
+        <section class="main-carousel">
+            <button class="button-arrow -left"><span class="content">Voltar</span></button>
+
+            <div class="items">
+                <div class="elements">
+                    <figure class="node-card">
+                        <figcaption class="title">2018-2020</figcaption>
+                        <div class="logo">
+                            <img src="assets/img/logoNic.png" alt="logoNic">
+                        </div>
+                    </figure>
+                    <figure class="node-card -bgblue">
+                        <figcaption class="title">2020</figcaption>
+                        <div class="logo">
+                            <img src="assets/img/BluePocket.png" alt="logoBP">
+                        </div>
+                    </figure>
+                </div>
+            </div>
+            <button class="button-arrow -right"><span class="content">Avançar</span></button>
+        </section>
+        <p class="main-description">
+            Sou um estudante de Ciência da computação da universidade de fortaleza,  
+            dentre as áreas das quais eu já estudei no meu curso a que eu mais me interessei 
+            foi a de frontEnd, então eu tenho procurado me especializar nas seguintes competências 
+            JavaScript, React.JS,  html e css.
+        </p>
     </section>
 
 </body>
