Create JS and movement of carousel

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="css/components/button-arrow.css">
     <link rel="stylesheet" href="css/components/node-card.css">
     <link rel="stylesheet" href="css/components/main-carousel.css">
+    
 </head>
 <body>
     <header class="main-header">
@@ -158,5 +159,7 @@
         </p>
     </section>
 
+
+    <script src="script/components/main-carousel.js"></script>
 </body>
 </html>
