--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="css/components/button-arrow.css">
     <link rel="stylesheet" href="css/components/node-card.css">
     <link rel="stylesheet" href="css/components/main-carousel.css">
+    <link rel="stylesheet" href="css/components/main-footer.css">
     
 </head>
 <body>
@@ -117,8 +118,8 @@
             <figure class="card-project -blue">
                 <img class="logo" src="assets/img/BluePocket.png" alt="BluePocketProject">
             </figure>
-            <figure class="card-project">
-                <img class="logo" src="assets/img/BluePocket.png" alt="BluePocket   Project">
+            <figure class="card-project -wine">
+                <img class="logo" src="assets/img/AluraQuiz.png" alt="AluraQuizProject">
             </figure>
             <figure class="card-project">
                 <img class="logo" src="assets/img/BluePocket.png" alt="BluePocketProject">
@@ -158,6 +159,19 @@
             JavaScript, React.JS,  html e css.
         </p>
     </section>
+
+    <section class="main-section -forms">
+
+    </section>
+
+    <footer class="main-footer">
+        <a class="action" href="https://www.linkedin.com/in/jorge-lins-93175a1b6/" target="_blank">
+            <img src="assets/img/linkedin.png" alt="LinkedinFooter">
+        </a>
+        <a class="action" href="https://github.com/JorgeLins/" target="_blank">
+            <img src="assets/img/github.png" alt="githubfooter">
+        </a>
+    </footer>
 
 
     <script src="script/components/main-carousel.js"></script>
