correcting project card bug

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <a class="main-action" href="#Skill" lang="en">Skills</a>
             <a class="main-action" href="#Projects">Projetos</a>
             <a class="main-action" href="#About">Sobre</a>
-            <a class="main-action" href="#Forms">Contatos</a>
-            <a class="main-button" href="" lang="en">Download CV</a>
+            <a class="main-action" href="#Forms">Contatos</a>   
+            <a class="main-button" href="assets/curriculum.pdf" lang="en">Download CV</a>
         </nav>
     </header>
 
@@ -121,9 +121,11 @@
             <figure class="card-project -blue">
                 <img class="logo" src="assets/img/BluePocket.png" alt="BluePocketProject">
             </figure>
-            <figure class="card-project -wine">
-                <img class="logo" src="assets/img/AluraQuiz.png" alt="AluraQuizProject">
-            </figure>
+            <a class="action" href="https://alura-quiz-nu.vercel.app"  target="_blank">
+                <figure class="card-project -wine">
+                    <img class="logo" src="assets/img/AluraQuiz.png" alt="AluraQuizProject">
+                </figure>
+            </a>
             <figure class="card-project">
                 <img class="logo" src="assets/img/BluePocket.png" alt="BluePocketProject">
             </figure>
@@ -156,7 +158,7 @@
             <button class="button-arrow -right"><span class="content">Avançar</span></button>
         </section>
         <p class="main-description">
-            Sou um estudante de Ciência da computação da universidade de fortaleza,  
+            Sou um estudante de ciência da computação da Unifor,  
             dentre as áreas das quais eu já estudei no meu curso a que eu mais me interessei 
             foi a de frontEnd, então eu tenho procurado me especializar nas seguintes competências 
             JavaScript, React.JS,  html e css.
@@ -164,7 +166,7 @@
     </section>
 
     <section id="Forms" class="main-section">
-        <form class="main-form">
+        <form class="main-form" action="mailto:jorgelins1155@gmail.com">
 
             <h1 class="main-title -second">Contato</h1>
             <label class="main-label" for="name">Nome</label>
