--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <figure class="node-card -bgblue">
                         <figcaption class="title">2020</figcaption>
                         <div class="logo">
-                            <img src="assets/img/BluePocket.png" alt="logoBP">
+                            <img src="assets/img/Vortex.png" alt="logoBP">
                         </div>
                     </figure>
                 </div>
